[gd_scene load_steps=16 format=2]

[ext_resource path="res://Actors/Skin.tscn" type="PackedScene" id=1]
[ext_resource path="res://Actors/Enemies/Leech/leech.png" type="Texture" id=2]
[ext_resource path="res://Actors/Enemies/Leech/Leech.gd" type="Script" id=3]
[ext_resource path="res://Libraries/StateMachine/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://Actors/Enemies/Leech/Patrol.gd" type="Script" id=5]
[ext_resource path="res://Actors/Enemies/EnemyStats.tscn" type="PackedScene" id=6]
[ext_resource path="res://Actors/Enemies/Leech/Pursuit.gd" type="Script" id=7]
[ext_resource path="res://Actors/Enemies/Leech/Attack.gd" type="Script" id=8]
[ext_resource path="res://UI/DamageHint.tscn" type="PackedScene" id=9]
[ext_resource path="res://Actors/Enemies/Leech/FangAttack.tscn" type="PackedScene" id=10]

[sub_resource type="Animation" id=1]
resource_name = "attack"
length = 0.375
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6 ]
}

[sub_resource type="Animation" id=2]
resource_name = "run"
length = 0.5
loop = true
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 8.0

[sub_resource type="CircleShape2D" id=4]
radius = 128.0

[sub_resource type="CircleShape2D" id=5]
radius = 16.0

[node name="Leech" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 128
collision_mask = 17
script = ExtResource( 3 )
damage_hint_scn = ExtResource( 9 )

[node name="Stats" parent="." instance=ExtResource( 6 )]

[node name="Skin" parent="." instance=ExtResource( 1 )]

[node name="AnimationPlayer" parent="Skin" index="0"]
anims/attack = SubResource( 1 )
anims/run = SubResource( 2 )

[node name="Sprite" parent="Skin" index="1"]
texture = ExtResource( 2 )
hframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )
initial_state = NodePath("Patrol")

[node name="Patrol" type="Node" parent="StateMachine"]
script = ExtResource( 5 )
spd_scaling = 0.2

[node name="DirChange" type="Timer" parent="StateMachine/Patrol"]
wait_time = 2.0

[node name="Pursuit" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Tire" type="Timer" parent="StateMachine/Pursuit"]
wait_time = 10.0
one_shot = true

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
attack_scn = ExtResource( 10 )

[node name="Cd" type="Timer" parent="StateMachine/Attack"]
one_shot = true

[node name="Wait" type="Timer" parent="StateMachine/Attack"]
one_shot = true

[node name="VisionArea" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionArea"]
shape = SubResource( 4 )

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource( 5 )
[connection signal="dead" from="Stats" to="." method="_on_Stats_dead"]
[connection signal="timeout" from="StateMachine/Patrol/DirChange" to="StateMachine/Patrol" method="_on_DirChange_timeout"]
[connection signal="timeout" from="StateMachine/Pursuit/Tire" to="StateMachine/Pursuit" method="_on_Tire_timeout"]
[connection signal="timeout" from="StateMachine/Attack/Cd" to="StateMachine/Attack" method="_on_Cd_timeout"]
[connection signal="timeout" from="StateMachine/Attack/Wait" to="StateMachine/Attack" method="_on_Wait_timeout"]

[editable path="Skin"]
